# HAMR_Holonomic_offroad_robot

./: .gitignore  .gitmodules  README.md  frames_2025-08-25_14.57.56.gv  frames_2025-10-02_22.15.25.gv  frames_2025-12-29_17.55.07.gv  setup.sh
HAMR_Controller/: IMU_call.cpp  controller.py  controller_and_pose_log.csv  platformio.ini  tof_scan.cpp
HAMR_Controller/src/: ekf_localization.h  imu_55.cpp  imu_55.h  imu_85.cpp  imu_85.h  main.cpp  odometry.h
src/elevation_mapping_cupy/: AGENTS.md  README.md  TODO.md  index_refacto_plan.md
src/elevation_mapping_cupy/.github/workflows/: python-tests.yml
src/elevation_mapping_cupy/docker/: build.sh
src/elevation_mapping_cupy/docs/: layout_alignment_plan.md
src/elevation_mapping_cupy/docs/source/: conf.py  documentation.rst  index.rst
src/elevation_mapping_cupy/docs/source/getting_started/: installation.rst  introduction.rst  tutorial.rst
src/elevation_mapping_cupy/docs/source/python/: index.rst
src/elevation_mapping_cupy/docs/source/usage/: parameters.rst
src/elevation_mapping_cupy/elevation_mapping_cupy/: CMakeLists.txt  package.xml
src/elevation_mapping_cupy/elevation_mapping_cupy/config/core/: core_param.yaml
src/elevation_mapping_cupy/elevation_mapping_cupy/elevation_mapping_cupy/: elevation_mapping.py  gridmap_utils.py
src/elevation_mapping_cupy/elevation_mapping_cupy/elevation_mapping_cupy/kernels/: custom_kernels.py
src/elevation_mapping_cupy/elevation_mapping_cupy/elevation_mapping_cupy/plugins/: inpainting.py  max_filter.py  plugin_manager.py
src/elevation_mapping_cupy/elevation_mapping_cupy/elevation_mapping_cupy/tests/: test_gridmap_layout.py  test_map_services.py  test_map_shifting.py
src/elevation_mapping_cupy/elevation_mapping_cupy/launch/: anymal.launch  anymal.launch.py  elevation_mapping.launch.py  elevation_mapping_cupy.launch  elevation_mapping_cupy.launch.py  elevation_mapping_turtle.launch.py
src/elevation_mapping_cupy/elevation_mapping_cupy/scripts/: elevation_mapping_node.py
src/elevation_mapping_cupy/elevation_mapping_cupy/test/: test_tf_gridmap_integration.py
src/elevation_mapping_cupy/elevation_mapping_cupy/test/config/: test_integration.yaml
src/elevation_mapping_cupy/scripts/: masked_replace_tool.py
test_codes/: Mobilit Ellepsoid.ipynb  astar_planner.py  circle.c  forward.c  plot.py  policy_planner.py  shape.c  square.c  straight.c  triangle.c  waypoints.csv
